Breadcrumbs: Removed generic breadcrumb SCSS and fixed RTL issues.
* Removed generic breadcrumb SCSS to align with wet-boew/wet-boew#7423.
* RTL fixes:
  * Prevents arrows from getting mispositioned between items.
  * Prevents text from unexpectedly getting cutoff and replaced with ellipses in WebKit browsers.

Closes #234.

--- a/src/views/_print.scss
+++ b/src/views/_print.scss
@@ -52,17 +52,6 @@ header {
 	}
 }
 
-#wb-bc {
-	.breadcrumb {
-		margin-bottom: 0;
-		padding-top: 0;
-	}
-
-	[href]:after {
-		content: "";
-	}
-}
-
 h1 {
 	margin-top: 0;
 }
